--- a/server/package.json
+++ b/server/package.json
@@ -24,10 +24,16 @@
     "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "http-errors": "^1.6.3",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.13",
+    "mongoose": "^5.0.14",
     "mongoose-validator": "^2.0.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "serve-favicon": "^2.5.0",
+    "vee-validate": "^2.0.6",
+    "vue": "^2.5.16",
+    "vue-bulma-datepicker": "^1.3.6",
+    "vue-bulma-modal": "^2.0.0-alpha.2"
   }
 }
