--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.0.14",
     "mongoose-validator": "^2.0.2",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.4",
     "serve-favicon": "^2.5.0",
     "vee-validate": "^2.0.6",
     "vue": "^2.5.16",
