--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ekifakhrureza/todo-fancy#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "bulma-calendar": "^1.3.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
